--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,28 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #fff;
     margin: 0;
+    background-image: url('../images/chicago_white_sox_logo_jersey_.png');
+    background-size: cover;
+    background-position: center;
 }
 .container {
     width: 90%;
     max-width: 400px;
-    background: white;
+    background: rgba(255,255, 255m 0.9);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 .signup-box h1 {
     text-align: center;
-    color: #333;
+    color: #000;
+    font-family: 'Arial Black', sans-serif;
 }
+p {
+    text-align: center;
+    color: #333;
 form {
     display: flex;
     flex-direction: column;
