--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,23 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    align-height: 100vh;
     background-color: #fff;
     margin: 0;
     background-image: url('../images/chicago_white_sox_logo_jersey_.png');
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
 }
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
 .container {
     width: 90%;
     max-width: 400px;
@@ -17,7 +27,8 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
+    text-align: center;
+}
 .signup-box h1 {
     text-align: center;
     color: #000;
@@ -39,6 +50,8 @@ input {
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
 }
 button {
     margin-top: 20px;
