--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ label {
     width: 100%;
     max-width: 350px;
 }
-input {
+input, button {
     padding: 10px;
     margin-top: 5px;
     border: 1px solid #ccc;
