--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ label {
     width: 100%;
     max-width: 350px;
 }
-input, button {
+input {
     padding: 10px;
     margin-top: 5px;
     border: 1px solid #ccc;
