--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,15 @@ input {
 }
 button {
     margin-top: 20px;
+    padding: 10px;
     background: #000;
     color: white;
     border: none;
+    border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    width: 100%;
+    max-width: 350px;
 }
 
 button:hover {
