--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,49 @@ button:hover {
     font-weight: bold;
 }
 @media (min-width: 768px) {
+    body {
+        background-size: 50%;  
+        background-position: center;
+        padding: 10px;
+    }
+
+    .container {
+        max-width: 100%;
+        padding: 15px;
+        border-radius: 5px;
+        box-shadow: none;
+    }
+
+    .signup-box h1 {
+        font-size: 24px;
+    }
+
+    p {
+        font-size: 16px;
+        color: #333;
+    }
+
+    input, button {
+        max-width: 90%;  
+        font-size: 18px;
+        padding: 12px;
+    }
+
+    button {
+        background: #000;
+    }
+
+    button:hover {
+        background: #333;
+    }
+
+    .right-image {
+        max-width: 70%;
+        right: 10px;
+        top: 80%;
+        transform: translateY(-50%); 
+    }
+}
     
 @media (min-width: 1024px) {
     body {
